# auto-stamp

./: .gitignore  README.md  notes.txt
calc_plate/: CMakeLists.txt  alignment.cpp  alignment.h  main_threshold.cpp  test_threshold.cpp  threshold.cpp  threshold.h
etc/init/: node-pennyblack.conf
etc/nginx/: nginx.conf
harvester/: app.js  package.json  rejectwords.js
letterdetect/: CMakeLists.txt  alignment.cpp  alignment.h  corner.cpp  debugutils.cpp  debugutils.h  erosion.cpp  findsquares.cpp  findsquares.h  letterdetect.cpp  letterdetect.h  main.cpp  main_threshold.cpp  oflaw.cpp  platebyusercoords.cpp  raydetect.cpp  recognition.cpp  recognition.h  test_threshold.cpp  threshold.cpp  threshold.h  utils.cpp  utils.h
node-litchfield-plate/: binding.gyp  package.json  plate.cc  plate.js  test.js
node-pennyblack/: app.js  package.json
node-pennyblack/public/javascripts/: analytics.js  cookiedirective.js
node-pennyblack/public/js/: analytics.js
node-pennyblack/public/lib/bootstrap/css/: bootstrap.min.css
node-pennyblack/public/stylesheets/: style.css
node-pennyblack/routes/: index.js  info.js
node-pennyblack/views/: about.jade  error.jade  index.jade  limitations.jade  privacy-policy.jade  result.jade  uploadedstamp.jade
node-pennyblack/views/includes/: footer.jade  header.jade  topbar.jade
node-pennyblack/views/mixins/: qa.jade
sample/: API.css  GettingStarted_JS_NV_JSON.html  Sample_GettingStarted_JS_NV_JSON.html  ss-print.css  ss-styles.css  task.css
